# bramble

./: .dockerignore  Dockerfile  Main.hs  Makefile  Prototype.hs  README.md  align.txt  bramble-raml.cabal  bramble.cabal  drawdata.sh
doc/: align.txt  drawdata.sh  logo.html  raml.dot
resources/: worldmusic.raml
src/: Body.hs  IO.hs  Main.hs  Prototype.hs  RAML.hs  Request.hs  Response.hs
src/Bramble/: Body.hs  IO.hs  RAML.hs  Request.hs  Response.hs
test/: Main.hs
test/examples/: amazon_s3_rest_api.raml  amazon_simple_storage_api.raml  dropbox_api_base_uri_params.raml  dropbox_api_security.raml  dropbox_api_security_scheme.raml  example_api_applied_trait_params.raml  example_api_applied_traits.raml  example_api_functions.raml  example_api_optional_properties.raml  example_api_resource_types.raml  example_api_schema.raml  example_api_traits.raml  example_api_traits_includes.raml  example_api_traits_includes_short.raml  flat_filesystem_api.raml  freshbooks_api.raml  github_api.raml  github_api_documentation_pages.raml  github_api_nested_resources.raml  github_api_query_parameters.raml  github_api_query_strings.raml  github_api_resources.raml  github_api_scopes.raml  github_api_security_scheme.raml  github_api_uri_params.raml  jobs_body.raml  jobs_examples.raml  jobs_schema.raml  jobs_schema_include.raml  media_responses.raml  media_responses_codes.raml  media_responses_description.raml  media_responses_description_2.raml  media_responses_headers.raml  media_responses_headers_description.raml  media_type_api.raml  salesforce_chatter_rest_api.raml  salesforce_chatter_rest_api_params.raml  salesforce_chatter_rest_api_protocols.raml  stormpath_rest_api.raml  (+13 more)
