name:                bramble-raml
version:             0.1.0.0
synopsis:            The Bramble Project is a RAML parser, datatypes, and client generator.
homepage:            http://github.com/sordina/bramble-raml
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable bramble
  main-is:             Main.hs
  build-depends:       base -any
  hs-source-dirs:      src
  default-language:    Haskell2010
