name:                bramble-raml
version:             0.1.0.0
synopsis:            The Bramble Project is a RAML parser, datatypes, and client generator.
homepage:            http://github.com/sordina/bramble-raml
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable bramble
  main-is:             Main.hs
  build-depends:       base -any,
                       yaml                 >= 0.8,
                       aeson                >= 0.7,
                       aeson-pretty         >= 0.7,
                       bytestring           >= 0.10,
                       containers           >= 0.5,
                       unordered-containers >= 0.2,
                       text                 >= 1.1,
                       vector               >= 0.10,
                       safe                 >= 0.3,
                       groom                >= 0.1
                       -- hjsonschema          >= 0.5

  hs-source-dirs:      src
  default-language:    Haskell2010
