name:                bramble-raml
version:             0.1.0.0
synopsis:            The Bramble Project is a RAML parser, datatypes, and client generator.
homepage:            https://github.com/sordina/bramble#bramble-raml
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Bramble.RAML,
                       Bramble.IO,
                       Bramble.Body,
                       Bramble.Request
                       Bramble.Response
  build-depends:       base -any,
                       yaml                 >= 0.8,
                       aeson                >= 0.7,
                       aeson-pretty         >= 0.7,
                       bytestring           >= 0.10,
                       containers           >= 0.5,
                       unordered-containers >= 0.2,
                       text                 >= 1.1,
                       vector               >= 0.10,
                       safe                 >= 0.3,
                       wreq                 >= 0.4.1,
                       EitherT              >= 0.2,
                       transformers         >= 0.3,
                       split                >= 0.2,
                       http-types           >= 0.5,
                       lens                 >= 4.9

executable bramble
  main-is:             Main.hs
  build-depends:       base -any,
                       bramble-raml,
                       groom                >= 0.1,
                       transformers         >= 0.3,
                       EitherT              >= 0.2,
                       wreq                 >= 0.4.1,
                       yaml                 >= 0.8,
                       aeson                >= 0.7,
                       lens                 >= 4.9
  default-language:    Haskell2010

Test-Suite test-bramble
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base, bramble-raml, directory >= 1.2, EitherT >= 0.2
  default-language:    Haskell2010
